Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108765

Frequent unsupported damage and damage_buffer warning

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.0
    • 6.4.1
    • QPA: Wayland
    • None
    • Linux/Wayland
    • 510fc8325 (dev)

    Description

      When a QtWayland client is run with client side decorations (QT_WAYLAND_DISABLE_WINDOWDECORATION not set), the Qt compositor (e.g. minimal-qml) warns about "Unsupported: Client is using both wl_surface.damage_buffer and wl_surface.damage.". This is rather annoying, since it happens with almost all examples. Surface damage has been deprecated in favor of damage_buffer, so Qt clients will actually use damage_buffer (also for decorations). However, eglSwapBuffers still calls damage (with max. size). Hence there are both calls in one frame. I wonder, whether and how this warning could be avoided.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes